--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>App</title>
+    <link href="/output.css" rel="stylesheet" />
   </head>
   <body>
-    {{ message }} by hbs
+    <h1 class="text-3xl font-bold underline">
+      {{message}}
+      by hbs
+    </h1>
+    <div class="">
+      aaaaa
+    </div>
   </body>
 </html>
