layoutを使うように

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,12 @@
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>App</title>
-    <link href="/output.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">
-      {{message}}
-      by hbs
-    </h1>
-    <div class="">
-      aaaaa
-    </div>
-  </body>
-</html>
+{{#> main}}
+{{#*inline "body"}}
+<div class="text-center pt-16">
+  <h1 class="text-3xl font-bold">
+    じゃんけんメーカー
+  </h1>
+  <div class="">
+    Comming Soon...
+  </div>
+</div>
+{{/inline}}
+{{/main}}
