--- a/views/jankens/ham.hbs
+++ b/views/jankens/ham.hbs
@@ -10,6 +10,7 @@
         class="underline"
       >@Hid3</a></p>
     <img src={{imagePath}} class="mt-6" />
+    <img src="/svgs/hand-regular.svg" class="mt-6 bg-white w-36" />
   </div>
 </div>
 {{/inline}}
