一通りできかけ

--- a/views/jankens/show.hbs
+++ b/views/jankens/show.hbs
@@ -13,30 +13,43 @@
       >@Hid3</a></p>
     <img src={{imagePath}} class="mt-6" />
     <div class="text-slate-900 p-6">
-      <a
-        href="/j/{{id}}/rock"
-        class="py-2 px-4 rounded inline-flex items-center bg-white gap-2 font-bold"
-      >
-        <img src="/svgs/hand-back-fist-regular.svg" class="w-8 bg-white" /><span
-        >グーで勝つ</span>
-      </a>
-      <div class="flex justify-between mt-6">
-        <a
-          href="/j/{{id}}/scissors"
+      <form action="/{{id}}" method="POST">
+        <button
+          type="submit"
           class="py-2 px-4 rounded inline-flex items-center bg-white gap-2 font-bold"
         >
           <img
-            src="/svgs/hand-scissors-regular.svg"
-            class="w-8 bg-white transform rotate-90"
-          /><span>チョキで勝つ</span>
-        </a>
-        <a
-          href="/j/{{id}}/paper"
-          class="py-2 px-4 rounded inline-flex items-center bg-white gap-2 font-bold"
-        >
-          <img src="/svgs/hand-regular.svg" class="w-8 bg-white" /><span
-          >パーで勝つ</span>
-        </a>
+            src="/svgs/hand-back-fist-regular.svg"
+            class="w-8 bg-white"
+          /><span>グーで勝つ</span>
+        </button>
+        <input type="hidden" name="hand" value="rock2" />
+      </form>
+      <div class="flex justify-between mt-6">
+        <form action="/{{id}}" method="POST">
+          <button
+            type="submit"
+            class="py-2 px-4 rounded inline-flex items-center bg-white gap-2 font-bold"
+          >
+            <img
+              src="/svgs/hand-scissors-regular.svg"
+              class="w-8 bg-white transform rotate-90"
+            /><span>チョキで勝つ</span>
+          </button>
+          <input type="hidden" name="hand" value="scissors" />
+        </form>
+        <form action="/{{id}}" method="POST">
+          <button
+            type="submit"
+            class="py-2 px-4 rounded inline-flex items-center bg-white gap-2 font-bold"
+          >
+            <img
+              src="/svgs/hand-regular.svg"
+              class="w-8 bg-white"
+            /><span>パーで勝つ</span>
+          </button>
+          <input type="hidden" name="hand" value="paper" />
+        </form>
       </div>
     </div>
   </div>
