--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,13 +1,38 @@
 <html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/output.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/output.css">
-</head>
+    {{#if ogp}}
+      <meta name="twitter:card" content="summary_large_image" />
+      {{#if ogp.title}}
+        <meta name="twiter:title" content={{ogp.title}} />
+        <meta property="og:title" content={{ogp.title}} />
+      {{/if}}
+      {{#if ogp.description}}
+        <meta
+          name="twitter:description"
+          content={{ogp.description}}
+        />
+        <meta
+          property="og:description"
+          content={{ogp.description}}
+        />
+      {{/if}}
+      {{#if ogp.url}}
+        <meta name="twitter:url" content={{ogp.url}} />
+        <meta property="og:url" content={{ogp.url}} />
+      {{/if}}
+      {{#if ogp.imageUrl}}
+        <meta name="twitter:image" content={{ogp.url}} />
+        <meta property="og:image" content={{ogp.imageUrl}} />
+      {{/if}}
+    {{/if}}
+  </head>
 
-<body>
-  {{> body}}
-</body>
+  <body>
+    {{> body}}
+  </body>
 
 </html>
