--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -25,7 +25,7 @@
         <meta property="og:url" content={{ogp.url}} />
       {{/if}}
       {{#if ogp.imageUrl}}
-        <meta name="twitter:image" content={{ogp.url}} />
+        <meta name="twitter:image" content={{ogp.imageUrl}} />
         <meta property="og:image" content={{ogp.imageUrl}} />
       {{/if}}
     {{/if}}
