アナリティクス

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,6 +31,16 @@
     {{/if}}
   </head>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-80ZJ3XFXRC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-80ZJ3XFXRC');
+  </script>
+
   <body>
     {{> body}}
   </body>
